--- a/index-style.css
+++ b/index-style.css
@@ -121,6 +121,7 @@ img{
 }
 ::-webkit-scrollbar-track{
   background:#ffffff;
+  border-radius: 20px;
 }
 ::-webkit-scrollbar-track:hover{
   background:#f3f3f3;
@@ -128,6 +129,7 @@ img{
 ::-webkit-scrollbar-thumb{
   background: #FBAB60;
   border-radius: 0px;
+  border-radius: 20px;
 }
 ::-webkit-scrollbar-thumb:hover{
   background: rgb(243, 133, 29);
