--- a/index-style.css
+++ b/index-style.css
@@ -55,14 +55,14 @@ p{
   text-align: center;
   padding: 14px 16px;
   text-decoration: underline;
-  background-color: #2292A4;
+  background-color: #262838;
   font-weight: bolder;
 }
 .dropdown {
   position: fixed;
   width: 100%;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
-  background-color: #2292A4;
+  background-color: #262838;
   top: 0;
   left: 0;
 }
@@ -84,7 +84,7 @@ p{
 }
 .dropdown-content {
   display: none;
-  background-color: #2292A4;
+  background-color: #262838;
   min-width: 160px;
   position: absolute; 
 }
@@ -99,6 +99,9 @@ p{
   background-color: #FBAB60;
   color: #ffffff;
   font-weight: bolder;
+}
+.dropdown:hover{
+  box-shadow: inset 0 -5px 0 0 #323447;
 }
 .dropdown:hover .dropdown-content {
   display:block;
@@ -120,11 +123,11 @@ img{
   scroll-behavior: smooth;
 }
 ::-webkit-scrollbar-track{
-  background:#ffffff;
+  background: #0e0e0e;
   border-radius: 20px;
 }
 ::-webkit-scrollbar-track:hover{
-  background:#f3f3f3;
+  background:#191a22;
 }
 ::-webkit-scrollbar-thumb{
   background: #FBAB60;
@@ -133,7 +136,7 @@ img{
 }
 ::-webkit-scrollbar-thumb:hover{
   background: rgb(243, 133, 29);
-  border-radius: 0px;
+  border-radius: 20px;
 }
 ::-webkit-scrollbar-button{
   background-color: #ffffff;
