--- a/index-style.css
+++ b/index-style.css
@@ -1,5 +1,5 @@
 html{
-  cursor: url(cursor1.png), auto;
+  cursor: url(Pointer\ 2.cur), auto;
   scroll-behavior: smooth;
 }
 body{
@@ -9,7 +9,7 @@ body{
   background-color: #0E020A;
 }
 a{
-  color: #BDBF09;
+  color: #A7C2A3;
 }
 
 
@@ -39,8 +39,7 @@ p{
 
 
 ::selection {
-  color: #ffffff;
-  background: #ffffff;
+  color: #A7C2A3;
 }
 
 
@@ -51,7 +50,7 @@ p{
 .navbar a {
   float: left;
   font-size: 14px;
-  color: #6D9C48;
+  color: #76A786;
   text-align: center;
   padding: 14px 16px;
   text-decoration: underline;
@@ -71,14 +70,15 @@ p{
   border: none;
   outline: none;
   text-decoration: underline;
-  color: #6D9C48;
+  color: #76A786;
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
   font-weight: bolder;
 }
 .navbar a:hover, .dropdown:hover .dropbtn {
-  box-shadow: inset 0 -5px 0 0 #22605B;
+  box-shadow: inset 0 -5px 0 0 #54957F;
+  cursor: url(Pointer\ 2.cur);
 }
 .dropdown-content {
   display: none;
@@ -94,10 +94,11 @@ p{
   text-align: left;
 }
 .dropdown-content a:hover {
-  box-shadow: inset 0 -5px 0 0 #22605B;
+  box-shadow: inset 0 -5px 0 0 #54957F;
+  cursor: url(Pointer\ 2.cur);
 }
 .dropdown:hover{
-  box-shadow: inset 0 -5px 0 0 #22605B;
+  box-shadow: inset 0 -5px 0 0 #54957F;
 }
 .dropdown:hover .dropdown-content {
   display:block;
@@ -126,7 +127,7 @@ img{
   background:#191a22;
 }
 ::-webkit-scrollbar-thumb{
-  background: #6D9C48;
+  background: #76A786;
   border-radius: 0px;
   border-radius: 20px;
 }
