--- a/index-style.css
+++ b/index-style.css
@@ -1,12 +1,11 @@
 html{
-  cursor: url(Pointer\ 2.cur), auto;
   scroll-behavior: smooth;
 }
 body{
   background-size: 100%;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 10px;
-  background-color: #0E020A;
+  background: (#191a22, #133E3E);
 }
 a{
   color: #A7C2A3;
@@ -39,7 +38,8 @@ p{
 
 
 ::selection {
-  color: #A7C2A3;
+  background-color: #A7C2A3;
+  color: #F5EFED;
 }
 
 
@@ -78,7 +78,6 @@ p{
 }
 .navbar a:hover, .dropdown:hover .dropbtn {
   box-shadow: inset 0 -5px 0 0 #54957F;
-  cursor: url(Pointer\ 2.cur);
 }
 .dropdown-content {
   display: none;
@@ -95,7 +94,6 @@ p{
 }
 .dropdown-content a:hover {
   box-shadow: inset 0 -5px 0 0 #54957F;
-  cursor: url(Pointer\ 2.cur);
 }
 .dropdown:hover{
   box-shadow: inset 0 -5px 0 0 #54957F;
@@ -120,19 +118,15 @@ img{
   scroll-behavior: smooth;
 }
 ::-webkit-scrollbar-track{
-  background: #0e0e0e;
+  background: #ffffff00;
   border-radius: 20px;
 }
 ::-webkit-scrollbar-track:hover{
-  background:#191a22;
+  background:#191a2200;
 }
 ::-webkit-scrollbar-thumb{
-  background: #76A786;
+  background: #95cca7;
   border-radius: 0px;
-  border-radius: 20px;
-}
-::-webkit-scrollbar-thumb:hover{
-  background: #458B68;
   border-radius: 20px;
 }
 ::-webkit-scrollbar-button{
