--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,8 @@ p{
   text-decoration: none;
   display: block;
   text-align: left;
+  font-size: 14px;
+  font-weight: bolder;
 }
 .dropdown-content a:hover {
   text-shadow: #83909c 5px 5px;
@@ -110,9 +112,30 @@ p{
   color: #ffffff;
   font-size: 20px;
 }
-img{
-  width: 30%;
-  border: solid 5px #ffffff;
+
+div.gallery {
+  margin: 5px;
+  border: 5px solid #fff;
+  float: left;
+  width: 200px;
+  background: #fff;
+}
+
+div.gallery:hover {
+  border: 5px solid #fff;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+  font-size: 14px;
+  color: #202329;
+  font-weight: bolder;
 }
 
 
@@ -138,3 +161,8 @@ img{
   height: 0px;
 }
 
+.copyright{
+  bottom: 0px;
+  left: 0px;
+  position:absolute;
+}
